new changes for ui

--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <script src="script.js"></script>
-    
+
+    <button id="btn" class="Rock">Rock</button>
+    <button id="btn" class="Paper">Paper</button>
+    <button id="btn" class="Scissors">Scissors</button>
 </body>
 </html>
